--- a/public/home/css/custom.css
+++ b/public/home/css/custom.css
@@ -53,7 +53,7 @@
 }
 
 .btn-hover.color-2 {
-    background-image: linear-gradient(to right, #ca000a, #880105, #9b4b00, #fcb430);
+    background-image: linear-gradient(to right, #0d74cc, #6087b8, #ff7f07, #f11616);
     box-shadow: 0 5px 15px rgba(242, 97, 103, .4);
 }
 
