--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -41,6 +41,10 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 h1,
 h2,
 h3,
@@ -2134,12 +2138,12 @@ ol {
 -----------------------*/
 
 .breadcrumb-area {
-    padding-top: 150px;
-    padding-bottom: 50px;
+    padding-top: 130px;
+    padding-bottom: 25px;
 }
 
 .breadcrumb__text h2 {
-    font-size: 40px;
+    font-size: 25px;
     color: #ffffff;
     font-weight: 700;
     margin-bottom: 10px;
@@ -2147,7 +2151,7 @@ ol {
 
 .breadcrumb__option a {
     display: inline-block;
-    font-size: 15px;
+    font-size: 13px;
     color: #ffffff;
     font-weight: 600;
     margin-right: 20px;
@@ -2169,7 +2173,7 @@ ol {
 
 .breadcrumb__option span {
     display: inline-block;
-    font-size: 15px;
+    font-size: 13px;
     color: #a8a8a8;
     font-weight: 600;
 }
@@ -2708,7 +2712,6 @@ ol {
     border-radius: 2px;
     padding: 10px 10px 8px 16px;
     width: calc(25% - 34px);
-    float: left;
     margin-right: 34px;
     margin-bottom: 25px;
 }
