--- a/public/home/css/style1.css
+++ b/public/home/css/style1.css
@@ -1,128 +1,153 @@
-    body
-    {
-        margin: 0;
-        padding: 0;
-        /* background-image: url(https://zicxa.com/hinh-anh/wp-content/uploads/2019/09/T%E1%BB%95ng-h%E1%BB%A3p-c%C3%A1c-h%C3%ACnh-%E1%BA%A3nh-l%C3%A0m-h%C3%ACnh-n%E1%BB%81n-m%C3%A0u-x%C3%A1m-%C4%91%E1%BA%B9p-nh%E1%BA%A5t-7.png); */
-        font-size: 16px;
-        color: #777;
-        font-family: sans-serif;
-        font-weight: 300;
-    }
+/* Tông màu xanh #006caa
+Tông màu cam #f37b16 */
 
-    #login-box
-    {
-        position: relative;
-        margin: 5% auto;
-        height: 400px;
-        width: 600px;
-        background: #fff;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
-    }
+.background_xanh {
+    background-color: #006caa;
+}
 
-    .left-box
-    {
-        position: absolute;
-        top: 0;
-        left: 0;
-        box-sizing: border-box;
-        padding: 40px;
-        width: 300px;
-        height: 400px;
-        background: #00BFFF;
-        color: white;
-    }
+.background_cam {
+    background-color: #f37b16;
+}
 
-    h1
-    {
-        margin: 0 0 20px 0;
-        font-weight: 300;
-        font-size: 28px;
-    }
+.text_xanh {
+    color: #006caa;
+}
 
-    input[type="text"],
-    input[type="password"]
-    {
-        display: block;
-        box-sizing: border-box;
-        margin-bottom: 20px;
-        padding: 4px;
-        width: 220px;
-        height: 32px;
-        border: none;
-        outline: none;
-        border-bottom: 1px solid #aaa;
-        font-family: sans-serif;
-        font-weight: 400;
-        font-size: 15px;
-        transition: 0.2s ease;
-    }
+.text_cam {
+    color: #f37b16;
+}
 
-    .right-box
-    {
-        position: absolute;
-        top: 0;
-        right: 0;
-        box-sizing: border-box;
-        padding: 40px;
-        width: 300px;
-        height: 400px;
-        background: #F4A460;
-        background-size: cover;
-        background-position: center;
-        color: black;
-    }
+body {
+    margin: 0;
+    padding: 0;
+}
 
-    .or
-    {
-        position: absolute;
-        top: 180px;
-        left: 280px;
-        width: 40px;
-        height: 40px;
-        background: #efefef;
-        border-radius: 50%;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
-        line-height: 40px;
-        text-align: center;
-    }
+#login-box {
+    margin-top: 125px;
+    position: relative;
+    margin: 3% auto;
+    height: 400px;
+    width: 900px;
+    background: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+    margin-bottom: 90px;
+}
 
-    .right-box .signinwith
-    {
-        display: block;
-        margin-bottom: 40px;
-        font-size: 28px;
-        color: #fff;
-        text-align: center;
-        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
-    }
+.left-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
+    padding: 40px;
+    width: 450px;
+    height: 400px;
+    background: #006caa;
+    color: white;
+}
+
+.right-box {
+    position: absolute;
+    top: 0;
+    right: 0;
+    box-sizing: border-box;
+    padding: 40px;
+    width: 450px;
+    height: 400px;
+    background: #f37b16;
+    background-size: cover;
+    background-position: center;
+    color: black;
+}
 
 
-    button.social
-    {
-        margin-bottom: 20px;
-        width: 220px;
-        height: 36px;
-        border: none;
-        border-radius: 2px;
-        color: #fff;
-        font-family: sans-serif;
-        font-weight: 500;
-        transition: 0.2s ease;
-        cursor: pointer;
-    }
+/* 
+.btn-socical {
+    margin-bottom: 20px;
+    width: 220px;
+    height: 36px;
+    border: none;
+    border-radius: 2px;
+    color: #fff;
+    font-family: sans-serif;
+    font-weight: 500;
+    transition: 0.2s ease;
+    cursor: pointer;
+}
 
-    .facebook
-    {
-        background: #1E90FF;
-    }
+input[type="text"],
+input[type="password"] {
+    display: block;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+    padding: 4px;
+    width: 220px;
+    height: 32px;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #aaa;
+    font-family: sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    transition: 0.2s ease;
+}
 
-    .google
-    {
-        background: #D2691E	;
-    }
+.btn-auth {
+    width: 60%;
+    height: 40px;
+    background-color: red;
+    margin: 0px auto;
+    position: relative;
+    bottom: -20px;
+    text-align: center;
+}
 
+.facebook {
+    background: #1E90FF;
+}
 
+.google {
+    background: #D2691E;
+} */
 
+.right-box_title {
+    width: 100%;
+    height: 15%;
+}
 
+.right-box_title h1 {
+    margin: 0 0 20px 0;
+    font-weight: 500;
+    font-size: 28px;
+    text-align: center;
+    color: #ffffff;
+}
 
+.right-box_content {
+    width: 100%;
+    height: 70%;
+    color: #ffffff
+}
 
+.right-box_content p {
+    color: #ffffff
+}
+
+.right-box_btn {
+    width: 100%;
+    height: 15%;
+}
+
+.right-box_btn {
+    width: 70%;
+    margin: 0px auto;
+    display: inline-block;
+    font-size: 14px;
+    padding: 15px 20px 10px;
+    color: #dadada;
+    text-transform: uppercase;
+    font-weight: 700;
+    border-radius: 2px;
+    text-align: center;
+    margin: 0 15%;
+    border-radius: 3px;
+}
