--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -1,39 +1,3 @@
-/******************************************************************
-  Template Name: Directing
-  Description:  Directing directory listing HTML Template
-  Author: Colorlib
-  Author URI: https://colorlib.com
-  Version: 1.0
-  Created: Colorlib
-******************************************************************/
-
-
-/*------------------------------------------------------------------
-[Table of contents]
-
-1.  Template default CSS
-	1.1	Variables
-	1.2	Mixins
-	1.3	Flexbox
-	1.4	Reset
-2.  Helper Css
-3.  Header Section
-4.  Hero Section
-5.  Service Section
-6.  Categories Section
-7.  Featured Section
-8.  Latest Product Section
-9.  Contact
-10.  Footer Style
--------------------------------------------------------------------*/
-
-
-/*----------------------------------------*/
-
-
-/* Template default CSS
-/*----------------------------------------*/
-
 html,
 body {
     height: 100%;
@@ -1120,6 +1084,8 @@ ol {
     border-radius: 0;
     margin-top: 0;
     width: 100%;
+    height: 300px;
+    overflow: auto;
 }
 
 .filter__select .nice-select:after {
