--- a/Front End/ThinhNQ/Source/css/style.css
+++ b/Front End/ThinhNQ/Source/css/style.css
@@ -1752,7 +1752,7 @@ a, a:active, a:focus, a:hover, a:visited {
 }
 a:focus, a:hover {
     color: #23527c;
-    text-decoration: underline;
+    text-decoration: none;
 }
 a:active, a:hover {
     outline: 0;
