--- a/Front End/HuyNQ/Test/css/style.css
+++ b/Front End/HuyNQ/Test/css/style.css
@@ -627,218 +627,42 @@ p{
           (__|__|(__|__| */
 
 /* đăng ký tài khoản ứng viên */
-
-.signup-uv_right {
-  background-color: rgb(255, 255, 255);
-  border-radius: 10px;
-  padding-top: 10px;
+.card-body__signup-uv {
+  border-radius: 1%;
 }
-.bg_signup-uv {
-background-image: url(https://cdn.pixabay.com/photo/2016/04/07/17/49/aircraft-1314333_1280.png);
-padding-top: 1;
+.logo__tvl-signup--uv img {
+  width: 40%;
+  margin-left: 25%;
+  margin-bottom: 5%;
 }
 
-.wrapper{
-max-width: 500px;
-width: 100%;
-background: #fff;
-border-radius: 5px;
-box-shadow: 2px 2px 4px rgba(0,0,0,0.125);
-padding: 30px;
-margin-left: 7%;
+.submit__signup-uv {
+  margin-top: 5%;
+  background-color: #076d9c;
+  color: white;
 }
-
-.wrapper .title{
-font-size: 24px;
-font-weight: 700;
-margin-bottom: 25px;
-color: #fec107;
-text-transform: uppercase;
-text-align: center;
+.submit__signup-uv:hover {
+  background-color: #03425f;
+  color: white;
 }
-
-.wrapper .form{
-width: 100%;
+.submit__signup-uv--btn-facebook {
+  background-color: rgb(26, 95, 223);
+  color: white;
 }
-
-.wrapper .form .inputfield{
-margin-bottom: 15px;
-display: flex;
-align-items: center;
+.submit__signup-uv--btn-facebook:hover {
+  background-color: rgb(17, 68, 163);
+  color: white;
 }
-
-.wrapper .form .inputfield label{
- width: 200px;
- color: #757575;
- margin-right: 10px;
-font-size: 14px;
+.submit__signup-uv--btn-google {
+  background-color: red;
+  color: white;
 }
-
-.wrapper .form .inputfield .input,
-.wrapper .form .inputfield .textarea{
-width: 100%;
-outline: none;
-border: 1px solid #d5dbd9;
-font-size: 15px;
-padding: 8px 10px;
-border-radius: 3px;
-transition: all 0.3s ease;
-}
-
-.wrapper .form .inputfield .textarea{
-width: 100%;
-height: 125px;
-resize: none;
-}
-
-.wrapper .form .inputfield .custom_select{
-position: relative;
-width: 100%;
-height: 37px;
-}
-
-.wrapper .form .inputfield .custom_select:before{
-content: "";
-position: absolute;
-top: 12px;
-right: 10px;
-border: 8px solid;
-border-color: #d5dbd9 transparent transparent transparent;
-pointer-events: none;
-}
-
-.wrapper .form .inputfield .custom_select select{
--webkit-appearance: none;
--moz-appearance:   none;
-appearance:        none;
-outline: none;
-width: 100%;
-height: 100%;
-border: 0px;
-padding: 8px 10px;
-font-size: 15px;
-border: 1px solid #d5dbd9;
-border-radius: 3px;
+.submit__signup-uv--btn-google:hover {
+  background-color: rgb(182, 11, 11);
+  color: white;
 }
 
 
-.wrapper .form .inputfield .input:focus,
-.wrapper .form .inputfield .textarea:focus,
-.wrapper .form .inputfield .custom_select select:focus{
-border: 1px solid #fec107;
-}
-
-.wrapper .form .inputfield p{
- font-size: 14px;
- color: #757575;
-}
-.wrapper .form .inputfield .check{
-width: 15px;
-height: 15px;
-position: relative;
-display: block;
-cursor: pointer;
-}
-.wrapper .form .inputfield .check input[type="checkbox"]{
-position: absolute;
-top: 0;
-left: 0;
-opacity: 0;
-}
-.wrapper .form .inputfield .check .checkmark{
-width: 15px;
-height: 15px;
-border: 1px solid #fec107;
-display: block;
-position: relative;
-}
-.wrapper .form .inputfield .check .checkmark:before{
-content: "";
-position: absolute;
-top: 1px;
-left: 2px;
-width: 5px;
-height: 2px;
-border: 2px solid;
-border-color: transparent transparent #fff #fff;
-transform: rotate(-45deg);
-display: none;
-}
-.wrapper .form .inputfield .check input[type="checkbox"]:checked ~ .checkmark{
-background: #fec107;
-}
-
-.wrapper .form .inputfield .check input[type="checkbox"]:checked ~ .checkmark:before{
-display: block;
-}
-/* nút Đăng ký */
-.wrapper .form .inputfield .btn{
-width: 60%;
-margin-left: 20%;
-font-size: 15px; 
-background:  #6fc2f1;
-color: #fff;
-cursor: pointer;
-outline: none;
-}
-
-.wrapper .form .inputfield .btn:hover{
-background: #045e92;
-}
-
-.wrapper .form .inputfield .btn.btn-facebook{
-  width: 60%;
-  margin-left: 20%;
-  font-size: 15px; 
-  background:  #0471d6;
-  color: #fff;
-  cursor: pointer;
-  outline: none;
-}
-
-.wrapper .form .inputfield .btn.btn-facebook:hover{
-  background: #044f96;
-}
-
-.wrapper .form .inputfield .btn.btn-google{
-  width: 60%;
-  margin-left: 20%;
-  font-size: 15px; 
-  background:  #c52a2a;
-  color: #fff;
-  cursor: pointer;
-  outline: none;
-}
-
-.wrapper .form .inputfield .btn.btn-google:hover{
-  background: #7c1212;
-}
-
-/* kết thúc nút Đăng ký */
-.wrapper .form .inputfield:last-child{
-margin-bottom: 0;
-}
-
-@media (max-width:420px) {
-.wrapper .form .inputfield{
-  flex-direction: column;
-  align-items: flex-start;
-}
-.wrapper .form .inputfield label{
-  margin-bottom: 5px;
-}
-.wrapper .form .inputfield.terms{
-  flex-direction: row;
-}
-}
-
-.card-title--uv {
-margin-left: 7%;
-color: #ffff;
-}
-.card-title--uv p {
-  font-size: 17px;
-}
 
 /* Kết thúc đăng ký ứng viên */
 
@@ -868,7 +692,13 @@ max-width: 100%;
 height: 700px;
 
 }
-
+.card-title__signup-uv {
+  margin-bottom: 70%;
+  color: #fff;
+}
+.card-title__signup-uv p {
+  font-size: 18px;
+}
 .card-title--uv {
     margin-left: 5%;
     margin-top: 5%;
