--- a/Front End/HuyNQ/Source/css/style.css
+++ b/Front End/HuyNQ/Source/css/style.css
@@ -1,4 +1,10 @@
 /* Thịnh */
+:root{
+  --while: #ffffff;
+  --Blue: #006CAA;
+  --Blue-While: #18A3E8;
+  --Orange: #F38121;
+}
 header {
     width: 100%;
     height: 80px;
@@ -44,6 +50,17 @@ nav ul li a:hover{
 }
 /* Thịnh */
 
+/* WWWWWW||WWWWWW
+ W W W||W W W
+      ||
+    ( OO )__________
+     /  |           \
+    /o o| TIMVIECLAM \
+    \___/||_||__||_|| *
+         || ||  || ||
+        _||_|| _||_||
+       (__|__|(__|__| */
+
 /* Huy */
 *{
     margin: 0;
@@ -57,6 +74,7 @@ nav ul li a:hover{
   }
   
 /* catalog */
+
 .container-catalog--top {
   display: flex;
   flex-wrap: wrap;
@@ -91,17 +109,23 @@ nav ul li a:hover{
 }
 /* kết thúc catalog */
 
+/* WWWWWW||WWWWWW
+ W W W||W W W
+      ||
+    ( OO )__________
+     /  |           \
+    /o o| TIMVIECLAM \
+    \___/||_||__||_|| *
+         || ||  || ||
+        _||_|| _||_||
+       (__|__|(__|__| */
+
 /* tìm kiếm công việc */
-
-
-
 .search_jobs .search_box{
 	position: relative;
 	width: 500px;
   height: 55px;
-  
 }
-
 .search_jobs .search_box .input{
 	margin-top: 8px;	
 	width: 92%;
@@ -138,6 +162,18 @@ nav ul li a:hover{
   
 }
 /* kết thúc tìm kiếm công việc */
+
+/* WWWWWW||WWWWWW
+ W W W||W W W
+      ||
+    ( OO )__________
+     /  |           \
+    /o o| TIMVIECLAM \
+    \___/||_||__||_|| *
+         || ||  || ||
+        _||_|| _||_||
+       (__|__|(__|__| */
+       
 
   /* content */
   .content h1 {
@@ -263,6 +299,17 @@ nav ul li a:hover{
 
 /* kết thúc box congviec */
 
+/* WWWWWW||WWWWWW
+ W W W||W W W
+      ||
+    ( OO )__________
+     /  |           \
+    /o o| TIMVIECLAM \
+    \___/||_||__||_|| *
+         || ||  || ||
+        _||_|| _||_||
+       (__|__|(__|__| */
+
 /* việc làm hấp dẫn */
 
 .logo-doanh_nghiep {
@@ -300,9 +347,18 @@ nav ul li a:hover{
 .card-jobs-uv:hover {
   background-color: rgb(244, 255, 255);
 }
-
-
 /* kết thúc việc làm hấp dẫn */
+
+/* WWWWWW||WWWWWW
+ W W W||W W W
+      ||
+    ( OO )__________
+     /  |           \
+    /o o| TIMVIECLAM \
+    \___/||_||__||_|| *
+         || ||  || ||
+        _||_|| _||_||
+       (__|__|(__|__| */
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
 .text-uppercase {
@@ -329,8 +385,18 @@ p{
 
 /* kết thúc doanh nghiệp nổi bật */
 
+/* WWWWWW||WWWWWW
+ W W W||W W W
+      ||
+    ( OO )__________
+     /  |           \
+    /o o| TIMVIECLAM \
+    \___/||_||__||_|| *
+         || ||  || ||
+        _||_|| _||_||
+       (__|__|(__|__| */
 
-/* card */
+/* card tin tức */
 #cards_landscape_wrap-2 a{
   text-decoration: none;
   outline: none;
@@ -409,8 +475,20 @@ p{
     color:rgb(206, 204, 199);
     font-weight:bold;
 }
-/* card */
+/* kết thúc card tin tức */
 
+/* WWWWWW||WWWWWW
+ W W W||W W W
+      ||
+    ( OO )__________
+     /  |           \
+    /o o| TIMVIECLAM \
+    \___/||_||__||_|| *
+         || ||  || ||
+        _||_|| _||_||
+       (__|__|(__|__| */
+
+/* footer */
 
 .page-footer {
     background-color: #1c375d;
@@ -459,5 +537,269 @@ p{
 .fas {
     color: orange;
 }
+/* kết thúc footer */
 
-/* Huy */
+/* WWWWWW||WWWWWW
+ W W W||W W W
+      ||
+    ( OO )__________
+     /  |           \
+    /o o| TIMVIECLAM \
+    \___/||_||__||_|| *
+         || ||  || ||
+        _||_|| _||_||
+       (__|__|(__|__| */
+
+
+/* Tài khoản ứng viên */
+.card-img-top {
+  width: 170px;
+  height: 170px;
+  padding: 20px;
+  position: absolute;
+}
+.card-body.card-body--uvien {
+  padding-left: 180px; 
+}
+.card-body.card-body--uvien h4 {
+  color: rgb(0, 102, 255);
+  font-size: 22px; 
+}
+.card-body.card-body--uvien a {
+  text-decoration: none;
+  color: white;
+}
+.btn-login_uvien {
+  background-color: rgb(0, 102, 255);
+}
+.card-body.card-body--uvien p {
+  font-size: 14px;
+  line-height: 15px;
+}
+.btn-login_uvien:hover {
+  background-color: rgb(2, 74, 182);
+}
+.card-uvien:hover{
+  background: #fff;
+  box-shadow: 0px 0px 2px rgba(7, 51, 197, 0.5);
+}
+.card-body.card-body--ntd {
+  padding-left: 180px; 
+}
+.card-body.card-body--ntd h4 {
+  color: rgb(241, 55, 55);
+  font-size: 22px; 
+}
+.card-body.card-body--ntd p {
+  font-size: 14px;
+  line-height: 15px;
+}
+.far.fa-check-circle {
+  margin-right: 5px;
+  color: rgb(122, 255, 173);
+}
+.card-body.card-body--ntd a {
+  text-decoration: none;
+  color: white;
+}
+.btn-login_ntd {
+  background-color: rgb(224, 104, 35);
+}
+.btn-login_ntd:hover {
+  background-color: rgb(182, 67, 1);
+}
+.card-ntd:hover{
+  background: #fff;
+  box-shadow: 0px 0px 2px rgba(7, 51, 197, 0.5);
+}
+
+/* Kết Thúc Tài khoản ứng viên */
+
+/* WWWWWW||WWWWWW
+    W W W||W W W
+          ||
+        ( OO )__________
+        /  |           \
+        /o o| TIMVIECLAM \
+        \___/||_||__||_|| *
+            || ||  || ||
+            _||_|| _||_||
+          (__|__|(__|__| */
+
+/* đăng ký tài khoản ứng viên */
+.card-body__signup-uv {
+  border-radius: 1%;
+}
+.logo__tvl-signup--uv img {
+  width: 40%;
+  margin-left: 25%;
+  margin-bottom: 5%;
+}
+
+.submit__signup-uv {
+  margin-top: 5%;
+  background-color: #076d9c;
+  color: white;
+}
+.submit__signup-uv:hover {
+  background-color: #03425f;
+  color: white;
+}
+.submit__signup-uv--btn-facebook {
+  background-color: rgb(26, 95, 223);
+  color: white;
+}
+.submit__signup-uv--btn-facebook:hover {
+  background-color: rgb(17, 68, 163);
+  color: white;
+}
+.submit__signup-uv--btn-google {
+  background-color: red;
+  color: white;
+}
+.submit__signup-uv--btn-google:hover {
+  background-color: rgb(182, 11, 11);
+  color: white;
+}
+
+
+
+/* Kết thúc đăng ký ứng viên */
+
+/* WWWWWW||WWWWWW
+ W W W||W W W
+      ||
+    ( OO )__________
+     /  |           \
+    /o o| TIMVIECLAM \
+    \___/||_||__||_|| *
+         || ||  || ||
+        _||_|| _||_||
+       (__|__|(__|__| */
+
+/* Đăng nhập ứng viên */
+
+:root {
+  --input-padding-x: 1.5rem;
+  --input-padding-y: .75rem;
+}
+
+.bg_login-uv {
+/* background: rgb(57,174,231);
+background: linear-gradient(90deg, rgba(57,174,231,1) 11%, rgba(25,199,235,1) 38%, rgba(33,194,236,1) 59%, rgba(101,177,237,1) 100%); */
+background-image: url(https://cdn.pixabay.com/photo/2016/04/07/17/49/aircraft-1314333_1280.png);
+max-width: 100%;
+height: 700px;
+
+}
+.card-title__signup-uv {
+  margin-bottom: 70%;
+  color: #fff;
+}
+.card-title__signup-uv p {
+  font-size: 18px;
+}
+.card-title--uv {
+    margin-left: 5%;
+    margin-top: 5%;
+    color: rgb(250, 250, 250);
+}
+.card-title--uv p {
+  font-size: 17px;
+}
+.card_login-uv {
+  border: 0;
+  border-radius: 0.3rem;
+  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+  margin: 20px;
+}
+
+.card_login-uv .card-title {
+  margin-bottom: 2rem;
+  font-weight: 300;
+  font-size: 1.5rem;
+}
+
+.card_login-uv .card-body {
+  padding: 2rem;
+}
+
+.form-signin {
+  width: 100%;
+}
+.logo__tvl-login--uv img {
+max-width: 50%;
+margin-left: 25%;
+margin-bottom: 7%;
+}
+.form-signin__login-uv {
+height: 40%;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Numans');
+
+
+.card_login-uv{
+margin-top: auto;
+margin-bottom: auto;
+margin-left: 10%;
+width: 33%;
+/* background-color: rgba(255, 255, 255, 0.5) !important; */
+background-color: #ffff;
+}
+
+.input-group-prepend span{
+background-color: rgb(255, 255, 255);
+}
+
+input:focus{
+outline: 0 0 0 0  !important;
+box-shadow: 0 0 0 0 !important;
+
+}
+
+.login_btn{
+color: white;
+background-color: #04a4ee;
+width: 100%;
+}
+
+.login_btn:hover{
+color: white;
+background-color: #076d9c;
+}
+
+.fas.fa-user {
+  color: rgb(9, 137, 201);
+}
+.fas.fa-key {
+  color: rgb(9, 137, 201);
+}
+.forgotpassword__login-uv a {
+  text-decoration: none;
+  color: rgb(132, 134, 136);
+}
+
+.card__login-uv--bottom {
+  margin-top: -3%;
+  margin-left: 58.7%;
+  width: 33%;
+}
+.text__login-uv--bottom a {
+  text-decoration: none;
+  color: rgb(2, 146, 241);
+}
+/* Kết thúc đăng nhập ứng viên */
+
+/* WWWWWW||WWWWWW
+ W W W||W W W
+      ||
+    ( OO )__________
+     /  |           \
+    /o o| TIMVIECLAM \
+    \___/||_||__||_|| *
+         || ||  || ||
+        _||_|| _||_||
+       (__|__|(__|__| */
+
+/* Huydeptrai */
