--- a/Project-TimViecLam/public/admin/css/app.css
+++ b/Project-TimViecLam/public/admin/css/app.css
@@ -4146,3 +4146,13 @@ input[switch=dark]:checked+label {
     right: 0;
     top: 12px
 }
+
+#preloader-logo__spinder {
+    width: 75%;
+    height: 75%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
